chore(i3blocks): add scripts links

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -1,4 +1,4 @@
-# Scripts were modified from https://github.com/vivien/i3blocks-contrib
+# Most of the scripts were from https://github.com/vivien/i3blocks-contrib
 # The top properties below are applied to every block, but can be overridden.
 separator=true
 separator_block_width=25
@@ -8,36 +8,42 @@ separator_block_width=25
 [window]
 label=[]= 
 command= xtitle -s -t 25
-interval=persist
 color=#A89984
+interval=persist
 
+# https://github.com/vivien/i3blocks-contrib/tree/master/memory
 [memory]
 label=MEM 
 command= ~/.config/i3blocks/memory
 interval=2
 
+# https://github.com/vivien/i3blocks-contrib/tree/master/cpu_usage
 # Requires sysstat -> sudo pacman -S sysstat
 [cpu-usage]
 label=CPU 
 command= ~/.config/i3blocks/cpu
 interval=2
 
+# https://github.com/vivien/i3blocks-contrib/tree/master/temperature
 [cpu-temperature]
 label=TEMP 
 command= ~/.config/i3blocks/temperature
 interval=30
 
+# https://github.com/vivien/i3blocks-contrib/tree/master/battery
 # Requires acpi -> sudo pacman -S acpi
 [battery]
 command= ~/.config/i3blocks/battery
 label=BAT 
 interval=5
 
+# https://github.com/vivien/i3blocks-contrib/tree/master/volume-pipewire
 [volume-pipewire]
 command= ~/.config/i3blocks/volume
 interval=once
 signal=1
 
+# Date and Time
 [time]
 command=date '+  %H:%M:%S / 󰃭 %a %d %b'
 interval=1
@@ -49,9 +55,10 @@ label=󰃠
 interval=once
 signal=2
 
+# Checks /tmp/recordingpid 
 [record-status]
 command= ~/.config/i3blocks/record-status
 label= 
+color=#FF0000
 interval=once
 signal=3
-color=#FF0000
