feat(i3blocks): add keyindicator for numlock

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -63,3 +63,15 @@ label=
 color=#FF0000
 interval=once
 signal=3
+
+# https://github.com/vivien/i3blocks-contrib/tree/master/keyindicator
+[keyindicator-numlock]
+command= ~/.config/i3blocks/keyindicator
+KEY=NUM
+TEXT_ON= NUM
+#TEXT_OFF=NumLockOff
+COLOR_ON=#A89984
+HIDE_WHEN_OFF=1
+markup=pango
+interval=once
+signal=4
