--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -40,6 +40,9 @@ bindsym XF86AudioPrev exec --no-startup-id $mediacontrol prev_track
 bindsym XF86MonBrightnessUp exec --no-startup-id $mediacontrol brightness_up; exec --no-startup-id pkill -RTMIN+2 i3blocks
 bindsym XF86MonBrightnessDown exec --no-startup-id $mediacontrol brightness_down; exec --no-startup-id pkill -RTMIN+2 i3blocks
 
+# Key Indicator
+bindsym --release Num_Lock exec --no-startup-id pkill -RTMIN+4 i3blocks
+
 # Lock Screen (enable pointer)
 bindsym $alt+Shift+l exec --no-startup-id i3lock -p default -i "$XDG_PICTURES_DIR/wallpapers/lock.png"
 
