feat(i3blocks): add swap instance for memory script module

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -15,6 +15,14 @@ interval=persist
 [memory]
 label=MEM 
 command= ~/.config/i3blocks/memory
+PERCENT=false
+interval=2
+
+[swap]
+label=SWAP 
+command= ~/.config/i3blocks/memory
+instance=swap
+PERCENT=false
 interval=2
 
 # https://github.com/vivien/i3blocks-contrib/tree/master/cpu_usage
