update(i3blocks): rename volume to volume-pipewire

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -47,7 +47,7 @@ interval=5
 
 # https://github.com/vivien/i3blocks-contrib/tree/master/volume-pipewire
 [volume-pipewire]
-command= ~/.config/i3blocks/volume
+command= ~/.config/i3blocks/volume-pipewire
 interval=once
 signal=1
 
