chore(i3blocks): add (modified) for volume script

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -45,7 +45,7 @@ label=BAT
 command= ~/.config/i3blocks/battery
 interval=5
 
-# https://github.com/vivien/i3blocks-contrib/tree/master/volume-pipewire
+# https://github.com/vivien/i3blocks-contrib/tree/master/volume-pipewire (modified)
 [volume-pipewire]
 command= ~/.config/i3blocks/volume-pipewire
 interval=once
